# valence-coprocessor

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: check-ci.yml  crate2nix.yml  main.yml  nix-check.yml
crates/core/: Cargo.toml  README.md
crates/core/src/: b64.rs  blake3.rs  context.rs  data.rs  domain.rs  hash.rs  historical.rs  lib.rs  mocks.rs  module.rs  registry.rs  sha2.rs  utils.rs  vm.rs  zkvm.rs
crates/core/src/context/: auth.rs  boilerplate.rs  domain.rs  mod.rs  storage.rs  zk.rs
crates/core/src/historical/: mod.rs  tests.rs  use_std.rs
crates/core/src/registry/: mod.rs  types.rs
crates/core/src/smt/: README.md  merkle.rs  mod.rs  tests.rs  types.rs
crates/core/src/zkvm/: mod.rs  tests.rs
crates/data/redis/: Cargo.toml
crates/data/redis/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/contrib/circuit/program/: Cargo.toml
crates/domain/contrib/circuit/program/src/: main.rs
crates/domain/contrib/circuit/script/src/: main.rs
crates/domain/contrib/domain/: Cargo.toml
crates/domain/contrib/domain/src/: lib.rs
crates/domain/contrib/user/: Cargo.toml
crates/domain/contrib/user/src/: lib.rs
crates/domain/src/: ethereum.rs  lib.rs
crates/domain/tests/: ethereum.rs
crates/domains/ethereum/: Cargo.toml
crates/domains/ethereum/contrib/circuit/program/: Cargo.toml
crates/domains/ethereum/contrib/circuit/program/src/: main.rs
crates/domains/ethereum/contrib/circuit/script/: Cargo.toml
crates/domains/ethereum/contrib/domain/: Cargo.toml
crates/domains/ethereum/contrib/domain/src/: lib.rs
crates/domains/ethereum/contrib/user/: Cargo.toml
crates/domains/ethereum/contrib/user/src/: lib.rs
crates/domains/ethereum/src/: circuit.rs  controller.rs  lib.rs  library.rs
crates/domains/ethereum/tests/: ethereum.rs
crates/endpoint/cli/: 2  Cargo.toml
crates/endpoint/cli/src/: cli.rs  lib.rs  main.rs
crates/endpoint/prover/: Cargo.toml
crates/endpoint/prover/src/: cache.rs  client.rs  lib.rs  pool.rs  prover.rs  scheduler.rs  tests.rs  types.rs  worker.rs
crates/endpoint/service/: Cargo.toml  build.rs
crates/endpoint/service/src/: api.rs  data.rs  lib.rs  middleware.rs  prover.rs  worker.rs
crates/merkle/: Cargo.toml  README.md
crates/merkle/src/: boilerplate.rs  compound.rs  lib.rs  mutate.rs  smt.rs  types.rs  verify.rs
crates/merkle/tests/: smt.rs
crates/redis/: Cargo.toml
crates/rocksdb/: Cargo.toml
crates/rocksdb/src/: lib.rs
crates/runtime/sp1/: Cargo.toml
crates/runtime/sp1/assets/sample-groth16-proof/: hello.elf  hello.proof  hello.vk
crates/runtime/sp1/contrib/hello/program/: Cargo.toml
crates/runtime/sp1/contrib/hello/program/src/: main.rs
crates/runtime/sp1/contrib/hello/script/: Cargo.toml
crates/runtime/sp1/contrib/hello/script/src/: main.rs
crates/runtime/sp1/src/: host.rs  lib.rs
crates/runtime/sp1/src/groth16/: consts.rs  mod.rs
crates/runtime/sp1/tests/: zkvm.rs
crates/runtime/wasm/contrib/: Cargo.toml
crates/runtime/wasm/contrib/alchemy/: Cargo.toml
crates/runtime/wasm/contrib/alchemy/src/: lib.rs
crates/runtime/wasm/contrib/controller/: Cargo.toml
crates/runtime/wasm/contrib/controller/src/: lib.rs
crates/runtime/wasm/contrib/domain/: Cargo.toml
crates/runtime/wasm/contrib/domain/src/: lib.rs
crates/runtime/wasm/contrib/hello/: Cargo.toml
crates/runtime/wasm/contrib/hello/src/: lib.rs
crates/runtime/wasm/contrib/historical/: Cargo.toml
crates/runtime/wasm/contrib/historical/src/: lib.rs
crates/runtime/wasm/contrib/http/: Cargo.toml
crates/runtime/wasm/contrib/http/src/: lib.rs
crates/runtime/wasm/contrib/log/: Cargo.toml
crates/runtime/wasm/contrib/log/src/: lib.rs
crates/runtime/wasm/contrib/portable_http_client/: Cargo.toml  README.md
crates/runtime/wasm/contrib/portable_http_client/src/: lib.rs
crates/runtime/wasm/contrib/program/: Cargo.toml
crates/runtime/wasm/contrib/program/src/: lib.rs
crates/runtime/wasm/contrib/raw_storage/: Cargo.toml
crates/runtime/wasm/contrib/raw_storage/src/: lib.rs
crates/runtime/wasm/contrib/storage/: Cargo.toml
crates/runtime/wasm/contrib/storage/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: config.rs  data.rs  lib.rs  worker.rs
crates/service/src/api/: mod.rs  registry.rs
crates/smt/: Cargo.toml  README.md
crates/smt/src/: lib.rs  main.rs  memory.rs  rocksdb.rs  smt.rs  tests.rs
crates/sp1/: Cargo.toml
crates/sp1/contrib/hello/program/: Cargo.toml
crates/sp1/src/: host.rs  lib.rs
crates/sp1/tests/: zkvm.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: crypto.rs  data.rs  lib.rs
crates/utils/client/: Cargo.toml
crates/utils/client/src/: lib.rs
crates/wasm/: Cargo.toml  Makefile
crates/wasm/contrib/hello/: Cargo.toml
crates/wasm/contrib/http/src/: lib.rs
crates/wasm/contrib/log/: Cargo.toml
crates/wasm/contrib/log/src/: lib.rs
crates/wasm/contrib/program/src/: lib.rs
crates/wasm/contrib/storage/: Cargo.toml
crates/wasm/contrib/storage/src/: lib.rs
crates/wasm/src/: abi.rs  lib.rs
crates/wasm/src/host/: mod.rs  valence.rs
crates/wasm/tests/: module.rs
docker/: Dockerfile  Makefile  README.md  entrypoint.sh
docker/rust-wrappers/circuit/: Cargo.toml
docker/rust-wrappers/circuit/src/: main.rs
docker/rust-wrappers/controller/: Cargo.toml
docker/rust-wrappers/controller/src/: lib.rs
docs/: concept_001_async_recursive_zk.md
tests/service/: Cargo.toml
tests/service/base/: Cargo.toml
tests/service/base/src/: lib.rs  main.rs
tests/service/circuit/program/: Cargo.toml
tests/service/circuit/program/src/: main.rs
tests/service/circuit/script/: Cargo.toml
tests/service/controller-wasm/: Cargo.toml
tests/service/domain/: Cargo.toml
tests/service/domain-wasm/: Cargo.toml
tests/service/domain-wasm/src/: lib.rs
tests/service/domain/src/: lib.rs
tests/service/program-circuit/: Cargo.toml
tests/service/program-circuit/program/: Cargo.toml
tests/service/program-wasm/: Cargo.toml
tests/service/program-wasm/src/: lib.rs
(+9 files in other folders)
