[workspace]
members = [
  "crates/core",
  "crates/data/redis",
  "crates/domains/ethereum",
  "crates/runtime/sp1",
  "crates/runtime/wasm",
  "crates/endpoint/cli",
  "crates/endpoint/prover",
  "crates/endpoint/service",
]
resolver = "2"
default-members = ["crates/core"]

[workspace.package]
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "0.1.13"
repository = "https://github.com/timewave-computer/valence-coprocessor"

[workspace.dependencies]
anyhow = { version = "1.0.83", default-features = false }
ark-groth16 = { version = "0.5.0", default-features = false }
bincode = "1.3.3"
blake3 = { version = "1.6.1", default-features = false }
buf-fs = "0.1.2"
clap = { version = "4.5.37", features = ["derive"] }
hashbrown = "0.15.2"
hex = "0.4.3"
lru = "0.14.0"
msgpacker = { version = "0.4.7", default-features = false, features = [
  "alloc",
  "derive",
] }
serde = { version = "1.0.219", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
sp1-sdk = "4.2.1"
sp1-verifier = "4.2.1"
tracing = { version = "0.1.41", default-features = false }

[profile.optimized]
inherits = "release"
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
