[workspace]
members = [
  "crates/core",
  "crates/data/redis",
  "crates/endpoint/cli",
  "crates/endpoint/prover",
  "crates/endpoint/service",
  "crates/runtime/sp1",
  "crates/runtime/wasm",
  "crates/utils/client",
]
resolver = "2"
default-members = ["crates/core"]

[workspace.package]
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "0.3.9"
repository = "https://github.com/timewave-computer/valence-coprocessor"

[workspace.dependencies]
anyhow = { version = "1.0.83", default-features = false }
ark-groth16 = { version = "0.5.0", default-features = false }
bincode = "1.3.3"
blake3 = { version = "1.6.1", default-features = false }
buf-fs = "0.1.2"
clap = { version = "4.5.37", features = ["derive"] }
hashbrown = "0.15.2"
hex = "0.4.3"
lru = "0.14.0"
msgpacker = { version = "0.4.8", default-features = false, features = [
  "alloc",
  "derive",
] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_cbor = "0.11.2"
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
sp1-core-executor = "5.0.0"
sp1-sdk = "5.0.0"
sp1-stark = "5.0.0"
sp1-verifier = "5.0.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41", default-features = false }

[profile.dev]
# https://github.com/seanmonstar/reqwest/issues/1450
debug-assertions = false

[profile.optimized]
inherits = "release"
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
