[workspace]
members = [
  "crates/core",
  "crates/merkle",
  "crates/types",
  "crates/data/redis",
  "crates/endpoint/cli",
  "crates/endpoint/prover",
  "crates/endpoint/service",
  "crates/runtime/sp1",
  "crates/runtime/wasm",
]
resolver = "2"
default-members = ["crates/core", "crates/merkle", "crates/types"]

[workspace.package]
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "0.4.7"
repository = "https://github.com/timewave-computer/valence-coprocessor"

[workspace.dependencies]
anyhow = { version = "1.0.83", default-features = false }
ark-groth16 = { version = "0.5.0", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bincode = "1.3.3"
blake3 = { version = "1.6.1", default-features = false }
buf-fs = "0.1.2"
clap = { version = "4.5.37", features = ["derive", "env"] }
const-hex = { version = "1.14.1", default-features = false, features = [
  "alloc",
  "core-error",
] }
hashbrown = "0.15.2"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
k256 = { version = "0.13.4", default-features = false, features = ["alloc"] }
lru = "0.14.0"
msgpacker = { version = "0.4.8", default-features = false, features = [
  "alloc",
  "derive",
] }
proptest = "1.6.0"
rand = "0.9.2"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_cbor = "0.11.2"
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
serde_json_canonicalizer = "0.3.1"
sha2 = { version = "0.10.9", default-features = false }
sp1-core-executor = "=5.0.8"
sp1-sdk = "=5.0.8"
sp1-stark = "=5.0.8"
sp1-verifier = "=5.0.8"
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41", default-features = false }
uuid = { version = "1.17.0", features = ["v7"] }
valence-crypto-utils = { version = "0.1.0", default-features = false }
zerocopy = { version = "0.8.23", features = ["alloc", "derive"] }

[profile.dev]
# https://github.com/seanmonstar/reqwest/issues/1450
debug-assertions = false

[profile.optimized]
inherits = "release"
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
incremental = false
