[package]
name = "valence-coprocessor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor definition"

[dependencies]
anyhow.workspace = true
buf-fs.workspace = true
base64.workspace = true
hashbrown.workspace = true
blake3.workspace = true
msgpacker.workspace = true
reqwest = { version = "0.12.15", optional = true, features = [
  "blocking",
  "json",
] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zerocopy = { version = "0.8.23", features = ["alloc", "derive"] }

[dev-dependencies]
proptest = "1.6.0"
valence-coprocessor = { path = ".", features = ["mocks"] }

[features]
default = ["std"]
mocks = []
std = ["base64/std", "blake3/std", "serde/std", "reqwest"]
