[package]
name = "valence-coprocessor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor definition"

[dependencies]
anyhow.workspace = true
buf-fs.workspace = true
base64.workspace = true
hashbrown.workspace = true
msgpacker.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { workspace = true, optional = true }
zerocopy.workspace = true

valence-coprocessor-merkle.path = "../merkle"
valence-coprocessor-types.path = "../types"

[dev-dependencies]
hex.workspace = true
proptest.workspace = true
rand.workspace = true
valence-coprocessor = { path = ".", features = ["mocks"] }

[features]
default = ["std"]
mocks = []
std = ["base64/std", "serde/std", "reqwest", "uuid"]
