[package]
name = "valence-coprocessor-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor common domains."

[dependencies]
anyhow = { workspace = true, optional = true }
base64 = {workspace = true, optional = true}
msgpacker = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
valence-coprocessor = { path = "../core", default-features = false, optional = true }
valence-zk-proofs = { git = "https://github.com/timewave-computer/zk-merkle-proofs.git", package = "common", optional = true }
valence-zk-proofs-ethereum = { git = "https://github.com/timewave-computer/zk-merkle-proofs.git", package = "ethereum", optional = true }

[dev-dependencies]
bincode.workspace = true
valence-coprocessor = { path = "../core", features = ["mocks"] }
valence-coprocessor-wasm.path = "../wasm"
valence-coprocessor-sp1.path = "../sp1"
sp1-sdk.workspace = true

[features]
default = ["circuit", "ethereum-circuit", "ethereum-lib", "lib", "serde"]
circuit = ["valence-coprocessor"]
ethereum-circuit = [
  "circuit",
  "msgpacker",
  "serde",
  "std",
  "valence-coprocessor",
  "valence-zk-proofs",
  "valence-zk-proofs-ethereum",
]
ethereum-lib = ["lib", "msgpacker", "serde", "valence-coprocessor"]
lib = ["anyhow", "base64", "serde_json"]
msgpacker = ["dep:msgpacker"]
serde = ["dep:serde"]
std = []

[[test]]
name = "ethereum"
path = "tests/ethereum.rs"
required-features = ["ethereum-circuit", "ethereum-lib"]
