[package]
name = "valence-smt"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Sparse Merkle tree implementation for the Valence protocol"

[dependencies]
anyhow = { workspace = true }
hashbrown = { workspace = true }
valence-coprocessor-core = { path = "../core", default-features = false }

[dev-dependencies]
proptest = "=1.6.0"

[features]
std = ["anyhow/std", "valence-coprocessor-core/std"]
default = ["memory", "std"]
memory = ["valence-coprocessor-core/blake3"]
