[package]
name = "valence-coprocessor-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor WASM module backend."

[dependencies]
anyhow.workspace = true
dlmalloc = { version = "=0.2.8", optional = true, features = ["global"] }
hashbrown = { workspace = true, optional = true }
lru.workspace = true
msgpacker.workspace = true
reqwest = { version = "=0.12.15", optional = true }
serde = { workspace = true, optional = true }
serde_json.workspace = true
valence-coprocessor = { path = "../core", default-features = false }
wasmtime = { version = "=32.0.0", optional = true }

[dev-dependencies]
valence-coprocessor = { path = "../core", features = ["mocks", "std"] }

[features]
default = ["std"]
abi-handlers = ["dlmalloc"]
std = [
  "valence-coprocessor/std",
  "anyhow/std",
  "hashbrown",
  "msgpacker/std",
  "reqwest",
  "serde",
  "serde/std",
  "serde_json/std",
  "wasmtime",
]
