[workspace]
members = ["base", "domain", "domain-wasm", "program-wasm"]
resolver = "2"
default-members = ["base", "domain"]

[workspace.package]
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
repository = "https://github.com/timewave-computer/valence-coprocessor"

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
msgpacker = { version = "0.4.7", default-features = false, features = [
  "alloc",
  "derive",
] }
serde = { version = "1.0.219", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
valence-coprocessor = { path = "../../crates/core", default-features = false }
