[package]
name = "valence-coprocessor-ethereum"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor Ethereum definition."

[dependencies]
anyhow = { workspace = true, optional = true }
msgpacker = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
valence-coprocessor = { path = "../../core", default-features = false }
valence-coprocessor-wasm = { path = "../../runtime/wasm", default-features = false }
valence-zk-proofs = { git = "https://github.com/timewave-computer/zk-merkle-proofs.git", package = "common", rev = "f474311c62df0011b549b48ea515d0d45dd1a4cc", optional = true }
valence-zk-proofs-ethereum = { git = "https://github.com/timewave-computer/zk-merkle-proofs.git", package = "ethereum", rev = "f474311c62df0011b549b48ea515d0d45dd1a4cc", optional = true }

[features]
default = ["circuit", "lib", "serde"]
circuit = [
  "msgpacker",
  "serde",
  "std",
  "valence-zk-proofs",
  "valence-zk-proofs-ethereum",
]
lib = ["anyhow", "msgpacker", "serde", "serde_json"]
msgpacker = ["dep:msgpacker"]
serde = ["dep:serde"]
std = []

[[test]]
name = "ethereum"
path = "tests/ethereum.rs"
required-features = ["circuit", "lib"]
