[package]
name = "valence-coprocessor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor CLI application."

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde_json.workspace = true
toml = "0.8.22"
valence-coprocessor.path = "../../core"
