[package]
name = "valence-coprocessor-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor prover service."

[dependencies]
anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
clap.workspace = true
flume = "0.11.1"
hex.workspace = true
lru.workspace = true
msgpacker = { workspace = true, default-features = true }
rand = "0.9.1"
serde.workspace = true
sp1-sdk.workspace = true
tokio = { version = "1.44.2", features = ["full"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", default-features = true, features = [
  "env-filter",
] }
tungstenite = "0.26.2"
valence-coprocessor.path = "../../core"
valence-coprocessor-sp1.path = "../../runtime/sp1"

[features]
gpu = ["sp1-sdk/cuda", "sp1-sdk/native-gnark"]
