[package]
name = "valence-coprocessor-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor prover service."

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
flume = "0.11.1"
hex.workspace = true
lru.workspace = true
msgpacker = { workspace = true, default-features = true }
rand = "0.9.1"
serde.workspace = true
serde_cbor.workspace = true
sp1-core-executor.workspace = true
sp1-sdk.workspace = true
sp1-stark.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", default-features = true, features = [
  "env-filter",
] }
tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
valence-coprocessor.path = "../../core"
valence-coprocessor-sp1.path = "../../runtime/sp1"

[features]
gpu = ["sp1-sdk/cuda", "sp1-sdk/native-gnark"]
