[package]
name = "valence-coprocessor-sp1"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor SP1 prover backend."

[dependencies]
anyhow = { workspace = true, optional = true }
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
#ark-groth16 = { workspace = true, optional = true }
ark-serialize = "0.5.0"
bincode = { workspace = true, optional = true }
lru = { workspace = true, optional = true }
serde.workspace = true
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0", default-features = false, features = [
  "oid",
] }
sp1-sdk = { workspace = true, optional = true }
tracing.workspace = true
valence-coprocessor = { path = "../../core", default-features = false }

[dev-dependencies]
bincode.workspace = true
serde_json.workspace = true
sp1-verifier = { workspace = true, features = ["ark"] }
valence-coprocessor = { path = "../../core", features = ["mocks", "std"] }

[features]
default = ["host", "std"]
#ark-groth16 = ["anyhow", "dep:ark-groth16"]
host = ["anyhow", "bincode", "lru", "sp1-sdk", "std", "valence-coprocessor/std"]
std = ["sha2-v0-10-8/std"]

[[test]]
name = "zkvm"
path = "tests/zkvm.rs"
required-features = ["host"]
