[package]
name = "valence-coprocessor-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor client"

[dependencies]
anyhow.workspace = true
hex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
uuid = { version = "1.17.0", features = ["v4"] }
