[package]
name = "valence-coprocessor-integrated-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor service integrated tests"

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
hex.workspace = true
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde_json.workspace = true
sp1-sdk = "4.2.1"
valence-coprocessor.workspace = true

valence-coprocessor-integrated-tests-domain.path = "../domain"
