[package]
name = "valence-coprocessor-integrated-tests-domain-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor service integrated tests"

[dependencies]
valence-coprocessor.workspace = true
valence-coprocessor-integrated-tests-domain.path = "../domain"
valence-coprocessor-wasm = { path = "../../../crates/runtime/wasm", default-features = false, features = [
  "abi-handlers",
] }

[lib]
crate-type = ["cdylib"]
