[package]
name = "valence-coprocessor-wasm-log"
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[dependencies]
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
valence-coprocessor-wasm = { path = "../../", default-features = false, features = [
  "abi-handlers",
] }

[lib]
crate-type = ["cdylib"]

[workspace]
